feat: show log in structure
